# distributed-codenames

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  go.work  go.work.sum  network.gv  skaffold.yaml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
assets/words/: normal.csv
docs/img/: distributed-codewords.drawio
k8s/: games-bff.yaml  games-spa.yaml  games.yaml  ingress.yaml  lobbies-spa.yaml  lobbies.yaml  players-spa.yaml  players.yaml
protos/: games.proto  words.proto
services/games/: Dockerfile  genproto.sh  go.mod  go.sum  main.go  skaffold.yaml
services/games-bff/: .eslintrc.js  Card.ts  Dockerfile  app.ts  client.ts  genproto.sh  index.ts  jest.config.ts  package-lock.json  package.json  skaffold.yaml  tsconfig.json
services/games-spa/: .env.development  .eslintrc.cjs  .eslintrc.js  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  skaffold.yaml  vite.config.ts
services/lobbies/: Dockerfile  lobbies.sln  skaffold.yaml
services/lobbies-spa/: .dockerignore  .editorconfig  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  skaffold.yaml
services/players/: Dockerfile  Pipfile  pyproject.toml  skaffold.yaml
services/players-spa/: .env  .env.development  .eslintrc.js  .prettierrc  Dockerfile  nginx.conf  package-lock.json  package.json  skaffold.yaml
services/players/app/: containers.py  main.py  redis.py  services.py
services/players/k8s/: players.yaml
services/words/: Dockerfile  genproto.sh  go.mod  go.sum  main.go  main_test.go  skaffold.yaml
(+193 files in other folders)
